<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".ChallangeLayout"
    android:background="#000000">

    <ImageView
        android:id="@+id/imgTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/title"/>

    <TextView android:text="@string/enter_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtInputTitle"
        android:textSize="16sp"
        android:labelFor="@+id/txtInput" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtInput"
        android:enabled="true"
        android:focusable="true"
        android:inputType="textFilter"
        android:focusableInTouchMode="true"
        android:digits="@string/alphabet" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnInfo"
            android:background="@drawable/btn_help" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnGo"
            android:textAllCaps="false"
            android:layout_gravity="right"
            android:background="@drawable/btn_go"
            android:layout_marginEnd="5dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnClear"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_clear"
            android:layout_marginEnd="5dp"/>

    </LinearLayout>
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/output"
            android:id="@+id/txtOutput"
            android:textSize="16sp"
            android:textStyle="italic"
            android:textColor="#8cff37"
            android:textAlignment="center"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical|center_horizontal" />
    </RelativeLayout>


</LinearLayout>
